--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^3.0.0",
     "core-js": "^2.5.4",
     "rxjs": "^6.0.0",
+    "bootstrap": "4.0.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
@@ -43,6 +45,7 @@
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
+    "node-sass": "^4.9.0",
     "typescript": "~2.7.2"
   }
 }
